<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="6dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_firstname_account"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:text="@string/textView_firstname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_firstname_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_lastname_account"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:text="@string/textView_lastname"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_lastname_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_phone_account_account"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:text="@string/textView_phone"
            android:textAppearance="?android:attr/textAppearanceLarge" />





        <EditText
            android:id="@+id/editText_phone_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/button_save" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView_oldpass_account"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="0.5"
            android:text="@string/textView_oldpass"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_oldpass_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_newpass_account"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.5"
                android:text="@string/textView_newpass"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_newpass_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/button_pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_pass" />

    <Button
        android:id="@+id/button_adr"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/button_adr" />

</LinearLayout>