<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/editText_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:ems="10"
            android:inputType="textEmailAddress" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText_username"
            android:layout_alignLeft="@+id/editText_username"
            android:layout_marginBottom="46dp"
            android:text="@string/username_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_username"
            android:layout_below="@+id/editText_username"
            android:layout_marginTop="18dp"
            android:text="@string/password_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password_label"
            android:layout_below="@+id/password_label"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_password"
            android:layout_below="@+id/editText_password"
            android:layout_marginTop="25dp"
            android:layout_toLeftOf="@+id/buttonSignUp"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonLogin"
            android:layout_alignBottom="@+id/buttonLogin"
            android:layout_alignRight="@+id/editText_password"
            android:text="@string/signup_button" />
    </RelativeLayout>

</LinearLayout>